- fixing letter spacing for chart

--- a/UI/src/components/widgets/product/product.less
+++ b/UI/src/components/widgets/product/product.less
@@ -405,6 +405,7 @@
     .ct-label{
         .gamification-text;
         text-transform: none;
+        letter-spacing: normal;
     }
 
     #gamification-view {
